--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,13 @@ POSTGRES_PASSWORD=""
 # Minio
 MINIO_ROOT_USER=""
 MINIO_ROOT_PASSWORD=""
+MINIO_ENDPOINT="minio:9000"
+MINIO_ACCESS_KEY=""
+MINIO_SECRET_KEY=""
+
+# REDIS
+REDIS_PASSWORD=""
+
+# CELERY
+CELERY_BROKER_URL="redis://:<REPLACE_REDIS_PASSWORD>@redis:6379/0"
+CELERY_RESULT_BACKEND="redis://:<REPLACE_REDIS_PASSWORD>@redis:6379/0"
