loader and fixes

--- a/.env.example
+++ b/.env.example
@@ -3,16 +3,19 @@ POSTGRES_DB=""
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
 
-# Minio
-MINIO_ROOT_USER=""
-MINIO_ROOT_PASSWORD=""
-MINIO_ENDPOINT="minio:9000"
-MINIO_ACCESS_KEY=""
-MINIO_SECRET_KEY=""
-
 # REDIS
 REDIS_PASSWORD=""
 
 # CELERY
 CELERY_BROKER_URL="redis://:<REPLACE_REDIS_PASSWORD>@redis:6379/0"
 CELERY_RESULT_BACKEND="redis://:<REPLACE_REDIS_PASSWORD>@redis:6379/0"
+
+# Minio
+MINIO_ENDPOINT="minio:9000"
+MINIO_ROOT_USER=""
+MINIO_ROOT_PASSWORD=""
+MINIO_USER=""
+MINIO_PASSWORD=""
+# ACCESS и SECRET генерируются для пользователя в MINIO, см. API
+MINIO_ACCESS_KEY="GENERATED_BY_MINIO"
+MINIO_SECRET_KEY="GENERATED_BY_MINIO"
