--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -26,6 +26,7 @@ colorama==0.4.6
 configobj==5.0.9
 configparser==7.2.0
 cryptography==46.0.3
+deepseek-ocr==0.1.1
 etelemetry==0.3.1
 fastapi==0.121.0
 filelock==3.20.0
