--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,7 @@ services:
     restart: unless-stopped
     command: server /data --console-address ":9001"
     env_file:
-      - .env
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-admin}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-password123}
-      MINIO_DEFAULT_BUCKETS: "pdf-raw,parsed-text,ml-models"
+      - ./core/.env
     ports:
       - 9000:9000  # API порт
       - 8083:9001  # Console порт - 
@@ -24,7 +20,9 @@ services:
     image: redis:7-alpine
     container_name: vkr-ml-redis
     restart: unless-stopped
-    command: redis-server --appendonly yes --maxmemory 512mb --maxmemory-policy allkeys-lru --requirepass ${REDIS_PASSWORD:-redis123}
+    env_file:
+      - ./core/.env
+    command: ["/bin/sh",  "-c",  "redis-server --appendonly yes --maxmemory 512mb --maxmemory-policy allkeys-lru --requirepass \"$${REDIS_PASSWORD:-redis123}\""]
     ports:
       - 6379:6379
     volumes:
@@ -41,10 +39,11 @@ services:
     image: rediscommander/redis-commander:latest
     container_name: vkr-ml-redis-commander
     restart: unless-stopped
+    env_file:
+      - ./core/.env
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-redis123}
       - REDIS_DB=0
     ports:
       - 8082:8081
@@ -57,11 +56,11 @@ services:
   ml-core:
     build: 
       context: .
-      dockerfile: core/Dockerfile
+      dockerfile: AIService.dockerfile
     container_name: vkr-ml-core
     restart: unless-stopped
     env_file:
-      - .env
+      - ./core/.env
     depends_on:
       redis:
         condition: service_healthy
@@ -77,18 +76,19 @@ services:
     volumes:
       - ./core:/app/core
       - ./src:/app/src
-      - .env:/app/.env
+      - ./core/.env:/app/.env
+      - ./main.py:/app/main.py
     ports:
       - 8000:8000  # FastAPI порт
 
   ml-console:
     build: 
       context: .
-      dockerfile: core/Dockerfile
+      dockerfile: AIService.dockerfile
     container_name: vkr-ml-console
     restart: unless-stopped
     env_file:
-      - .env
+      - ./core/.env
     depends_on:
       redis:
         condition: service_healthy
@@ -104,7 +104,9 @@ services:
     volumes:
       - ./core:/app/core
       - ./src:/app/src
-      - .env:/app/.env # hotswap env params while in dev 
+      - ./core/.env:/app/.env # hotswap env params while in dev 
+      - ./main.py:/app/main.py
+
     stdin_open: true
     tty: true
     command: ["/bin/sh", "-c", "source /app/.venv/bin/activate && exec /bin/sh"]
