fixed .env and refactored containers

--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -1,95 +1,9 @@
-acres==0.5.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aioredis==2.0.1
-aiosignal==1.4.0
-amqp==5.3.1
-annotated-doc==0.0.3
-annotated-types==0.7.0
-anyio==4.11.0
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-async-timeout==5.0.1
-attrs==25.4.0
-beautifulsoup4==4.14.2
-billiard==4.2.2
-celery==5.5.3
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.4
-ci-info==0.3.0
-click==8.3.0
-click-didyoumean==0.3.1
-click-plugins==1.1.1.2
-click-repl==0.3.0
-colorama==0.4.6
-configobj==5.0.9
-configparser==7.2.0
-cryptography==46.0.3
-deepseek-ocr==0.1.1
-etelemetry==0.3.1
-fastapi==0.121.0
-filelock==3.20.0
-fitz==0.0.1.dev2
-frozenlist==1.8.0
-fsspec==2025.10.0
-h11==0.16.0
-httplib2==0.31.0
-huggingface-hub==0.36.0
-idna==3.11
-kombu==5.5.4
-looseversion==1.3.0
-lxml==6.0.2
-minio==7.2.18
-multidict==6.7.0
-networkx==3.5
-nibabel==5.3.2
-nipype==1.10.0
-numpy==2.3.4
-packaging==25.0
-pandas==2.3.3
-pathlib==1.0.1
-pdfminer.six==20250506
-pdfplumber==0.11.7
-pillow==12.0.0
-prompt_toolkit==3.0.52
-propcache==0.4.1
-prov==2.1.1
-psycopg2-binary==2.9.11
-puremagic==1.30
-pycparser==2.23
-pycryptodome==3.23.0
-pydantic==2.12.4
-pydantic_core==2.41.5
-pydot==4.0.1
-pyparsing==3.2.5
-pypdfium2==5.0.0
-pytesseract==0.3.13
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-pytz==2025.2
-pyxnat==1.6.4
-PyYAML==6.0.3
-rdflib==7.4.0
-redis==7.0.1
-regex==2025.11.3
-requests==2.32.5
-safetensors==0.6.2
-scipy==1.16.3
-simplejson==3.20.2
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.8
-starlette==0.49.3
-tokenizers==0.22.1
-tqdm==4.67.1
-traits==7.0.2
-transformers==4.57.1
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-uvicorn==0.38.0
-vine==5.1.0
-wcwidth==0.2.14
-yarl==1.22.0
+uvicorn
+redis
+pymupdf
+psycopg2-binary
+fastapi
+minio
+dotenv
+aiohttp
+pdfplumber
