--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,21 @@ services:
       - service
       - manual
 
+  qdrant:
+    image: qdrant/qdrant:latest
+    ports:
+      - "6333:6333"
+      - "6334:6334"
+    volumes:
+      - qdrant_data:/qdrant/storage
+    networks:
+      - ml_network
+      - vkr-outer-network
+    profiles:
+      - service
+      - manual
+
+
   ml-service:
     build: 
       context: .
@@ -147,6 +162,8 @@ volumes:
     name: "vkr-volume-minio" 
   redis_data:
     name: "vkr-volume-redis"
+  qdrant_data:
+    name: "vkr-volume-qdrant"
 
 networks:
   ml_network: # Локальная сеть для данного контейнера
